[gd_scene load_steps=2 format=3 uid="uid://dqquq3c61v32u"]

[ext_resource type="Script" path="res://addons/debug_info_plugin/DebugInfoEditorLogPanel.gd" id="1_hqqa3"]

[node name="DebugInfoEditorLogPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hqqa3")
always_show_tab_bar = true
auto_activate_new_tabs = true

[node name="TabBar" type="TabBar" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
tab_close_display_policy = 2
drag_to_rearrange_enabled = true
tabs_rearrange_group = -1557372877

[node name="LogContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="NoLogInfo" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "No docked logs to display."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Window" type="Window" parent="."]
visible = false

[node name="AcceptDialog" type="AcceptDialog" parent="."]
